Quick return for getGridsForInstant